--- a/Keymate/Info.plist
+++ b/Keymate/Info.plist
@@ -46,5 +46,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>varsity_regular.ttf</string>
+	</array>
 </dict>
 </plist>
